Kuberenetes/inventorymanagementpod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: inventorymanagementpod
  labels:
    app: inventorymanagement
spec:
  containers:
  - name: inventorymanagement
    image: rishiapj/mytestapp:module
    ports:
      - containerPort: 80
