Kuberenetes/inventorymanagementrc.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: inventorymanagementrc
  labels:
    app: inventorymanagement
spec:
  replicas: 3
  selector:
    matchLabels:
      app: inventorymanagement
  template:
    metadata:
      labels:
        app: inventorymanagement
    spec:
      containers:
      - name: inventorymanagement
        image: rishiapj/mytestapp:module
        ports:
        - containerPort: 80
